[tool.poetry]
name = "decision-tree"
version = "0.1.0"
description = ""
authors = ["Brenton Cromwell <bcromwell@opentable.com>"]
readme = "README.md"
packages = [{include = "decision_tree"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
